up-to-date bis 12.Juni

--- a/section1.tex
+++ b/section1.tex
@@ -85,7 +85,7 @@ In der Vorlesung werden weitere Verallgemeinerungen zu $a:X_1 \times X_2 \righta
 	\]
 \end{itemize}
 
-\subsubsection*{Illustration}
+\paragraph*{Illustration}
 
 \begin{figure}[H]
   \centering\small
